# Group-Forth-Project

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
R-FORTH/: CMakeLists.txt  error_handling.h  main.c  token.c  token.h  variable.c  variable.h
R-FROTH/: CMakeLists.txt  error_handling.c  error_handling.h  forth.c  main.c  mainF.c  token.c  token.h  token.hh  token_stack.c  token_stack.h  token_stack.hh  token_stack_tests.cc
